# todoozy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  todoozy.json
benches/: parser.rs  todo_parser.rs
examples/: profile_parser.rs  vcs_git.rs
src/: .tdz  args.rs  cli.rs  comments.rs  constants.rs  filter.rs  fs.rs  lang.rs  lib.rs  main.rs  parse.rs  sort.rs  string.rs  testutils.rs  todo.rs
src/cli/: app.rs  args.rs  config.rs  display.rs  lint.rs  mod.rs  summary.rs  tui.rs
src/cli/tag/: list.rs  mod.rs
src/cli/todo/: edit.rs  get.rs  import.rs  list.rs  mod.rs  remove.rs
src/cli/tui/: app.rs  input.rs  mod.rs  popup.rs
src/filter/: parser.rs
src/fs/: mod.rs  walk.rs
src/lang/: c.rs  c.tdz  cpp.rs  cpp.tdz  csharp.tdz  css.rs  css.tdz  dockerfile.rs  go.rs  html.rs  html.tdz  java.tdz  javascript.rs  javascript.tdz  kotlin.tdz  makefile.rs  markdown.rs  mod.rs  php.tdz  protobuf.rs  python.rs  ruby.tdz  rust.rs  sh.rs  sql.rs  sql.tdz  swift.tdz  tdz.rs  terraform.rs  typescript.rs  yaml.rs
src/provider/: error.rs  fs.rs  mod.rs
src/provider/vcs/: cache.rs  error.rs  git.rs  mod.rs
src/todo/: editor.rs  error.rs  filter.rs  mod.rs  parser.rs  sort.rs  syntax.rs
src/todo/filter/: error.rs  mod.rs  parser.rs
src/todo/sort/: error.rs  mod.rs  parser.rs
