[package]
name = "todoozy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tdz"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
derive_builder = "0.20.0"
ignore = "0.4.22"
lexopt = "0.3.0"
nom = "7.1.3"
ratatui = "0.28.0"
